p3/confs/will/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  selector:
    name: wil-playground
  ports:
    - port: 8888
